--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-flake8 = "*"
+flake8 = "~=5.0"
 
 [packages]
-flask = "*"
-bunq-sdk = "*"
+flask = "~=2.2"
+bunq-sdk = "~=1.14"
 
 [requires]
 python_version = "3.8"
