systemd: roughly follow hier(7)

--- a/systemd/system/cyburgers.service
+++ b/systemd/system/cyburgers.service
@@ -3,7 +3,8 @@ Description=bunq integrations
 Wants=network-online.target
 
 [Service]
-ExecStart=/home/qguv/dev/cyburgers/.venv/bin/python /home/qguv/dev/cyburgers/cyburgers.py
+WorkingDirectory=/usr/local/lib/cyburgers
+ExecStart=pipenv run python3 cyburgers.py
 
 [Install]
 WantedBy=multi-user.target
